--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,7 +5,7 @@
 
   --main-padding: 28px;
   --secondary-padding: 14px;
-  --terciary-padding: 5px;
+  --terciary-padding: 3px;
   --min-padding: 1px;
 }
 
@@ -13,7 +13,7 @@
   margin: 1px;
   padding: var(--terciary-padding);
   box-sizing: border-box;
-  /* border: 1px solid red; */
+  /* border: 1px solid black; */
 }
 
 html {
@@ -37,6 +37,11 @@ header {
   h1 {
     color: black;
   }
+  div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   .marco {
     background-color: var(--main-light);
     width: 41%;
@@ -45,22 +50,21 @@ header {
     border: 5px solid var(--main-midtone);
     overflow: hidden;
     padding: var(--main-padding);
-    @media only screen and (max-width: 600px) {
+    justify-content: space-between;
+    align-items: center;
+    @media only screen and (max-width: 800px) {
       font-size: 10px;
       min-height: 20vh;
       display: none;
     }
   }
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 800px) {
     font-size: 10px;
     min-height: 20vh;
     img {
       display: none;
     }
   }
-}
-.hidden {
-  visibility: hidden;
 }
 
 nav {
@@ -72,7 +76,7 @@ nav {
 
 main,
 footer {
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 800px) {
     padding: 1px;
     h2 {
       font-size: 1em;
@@ -97,7 +101,7 @@ main {
 .seccionesFlex {
   /* background-color: gray; */
   display: flex;
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 800px) {
     display: inline;
   }
 }
@@ -117,33 +121,31 @@ main {
 
 .cardContainer {
   padding: 2px 16px;
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 800px) {
     font-size: 10px;
     padding: 1px 8px;
   }
 }
 
 .containerGrid {
-  /* background-color: gray; */
   display: grid;
   grid-template-columns: 11% 89%;
   /* grid-template-rows: 40% auto; */
   gap: 2px;
   justify-content: center;
   align-items: center;
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 800px) {
     display: block;
   }
 }
 
 .item {
-  /* display: inline-block;*/
   background-color: var(--main-light);
   border: solid;
 }
 
 article {
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 800px) {
     font-size: 10px;
     img {
       display: none;
@@ -154,7 +156,7 @@ article {
 .containerFlex {
   margin-bottom: 45px;
   display: flex;
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 800px) {
     display: inline;
   }
 }
@@ -177,26 +179,24 @@ textarea {
 }
 
 #enviar {
-  width: 10%;
+  width: 25%;
 }
 
 footer {
   position: fixed;
   bottom: 0;
-
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-
   width: 100%;
 
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 800px) {
     font-size: 0.5em;
   }
 
   .pie {
-    font-weight: 300;
+    font-weight: 100;
     color: #efe7ff;
   }
 
@@ -208,7 +208,7 @@ footer {
     justify-content: space-evenly;
     align-items: center;
 
-    @media only screen and (max-width: 600px) {
+    @media only screen and (max-width: 800px) {
       font-size: 1.3em;
     }
 
@@ -228,7 +228,7 @@ footer {
 footer.animacion {
   animation: scroll-color-change linear;
   animation-timeline: scroll();
-
+  /* z-index: -1; */
   .pie {
     color: unset;
   }
