--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -33,6 +33,8 @@ header {
   font-weight: normal;
   font-size: 20px;
   background-image: url("../resources/img/bg-blue.jpg");
+  position: relative;
+  z-index: -2;
   transition: all 0.1s;
   h1 {
     color: black;
@@ -40,13 +42,14 @@ header {
   div {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
   }
   .marco {
     background-color: var(--main-light);
     width: 41%;
-    height: 59vh;
-    border-radius: 550px;
+    height: 58vh;
+    border-radius: 10000px;
     border: 5px solid var(--main-midtone);
     overflow: hidden;
     padding: var(--main-padding);
@@ -70,7 +73,7 @@ header {
 nav {
   position: sticky;
   top: 0;
-  z-index: 999;
+  z-index: -999;
   box-shadow: 0px 1px 5px 2px black;
 }
 
@@ -100,6 +103,8 @@ main {
 
 .seccionesFlex {
   /* background-color: gray; */
+  position: relative;
+  z-index: -999;
   display: flex;
   @media only screen and (max-width: 800px) {
     display: inline;
@@ -110,6 +115,7 @@ main {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   margin: 5px;
+  z-index: -999;
   @media only screen and (max-width: 600px) {
     margin: 1px;
   }
@@ -197,7 +203,7 @@ footer {
 
   .pie {
     font-weight: 100;
-    color: #efe7ff;
+    color: black;
   }
 
   .redessociales {
@@ -214,7 +220,7 @@ footer {
 
     a {
       font-size: 2em;
-      color: #efe7ff;
+      color: black;
 
       transition: all 0.1s;
     }
@@ -228,7 +234,7 @@ footer {
 footer.animacion {
   animation: scroll-color-change linear;
   animation-timeline: scroll();
-  /* z-index: -1; */
+  z-index: -1;
   .pie {
     color: unset;
   }
@@ -250,10 +256,10 @@ footer.animacion {
 
 @keyframes scroll-color-change {
   from {
-    color: rgb(10, 1, 59);
+    color: var(--main-light);
   }
   to {
-    color: var(--main-light);
+    color: black;
   }
 }
 
