--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,6 +8,10 @@
   --terciary-padding: 3px;
   --min-padding: 1px;
 }
+::backdrop {
+  background-image: linear-gradient(45deg, gray, gray, dodgerblue, gray);
+  opacity: 0.75;
+}
 
 * {
   margin: 1px;
@@ -28,13 +32,21 @@ body {
   font-family: "Audiowide", sans-serif;
 }
 
+#Divcarrito {
+  /* z-index: 1; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: End;
+}
+
 header {
   min-height: 100vh;
   font-weight: normal;
   font-size: 20px;
   background-image: url("../resources/img/bg-blue.jpg");
   position: relative;
-  z-index: -2;
+  /* z-index: -2; */
   transition: all 0.1s;
   h1 {
     color: black;
@@ -73,7 +85,7 @@ header {
 nav {
   position: sticky;
   top: 0;
-  z-index: -999;
+  /* z-index: 1; */
   box-shadow: 0px 1px 5px 2px black;
 }
 
@@ -101,10 +113,20 @@ main {
   }
 }
 
+.buttoncontainer {
+  justify-content: space-between;
+  flex-direction: column;
+  height: 10vh;
+  display: flex;
+}
+.buttoncontainer .btn-holder {
+  justify-content: flex-end;
+  display: flex;
+}
+
 .seccionesFlex {
-  /* background-color: gray; */
   position: relative;
-  z-index: -999;
+  z-index: 1;
   display: flex;
   @media only screen and (max-width: 800px) {
     display: inline;
@@ -115,7 +137,7 @@ main {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   margin: 5px;
-  z-index: -999;
+  /* z-index: -999; */
   @media only screen and (max-width: 600px) {
     margin: 1px;
   }
@@ -234,7 +256,7 @@ footer {
 footer.animacion {
   animation: scroll-color-change linear;
   animation-timeline: scroll();
-  z-index: -1;
+  /* z-index: -1; */
   .pie {
     color: unset;
   }
